--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
   {
   "name": "myapp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   
   "scripts": {
-    "start": "node --watch server.js",
+    "start": "node server.js",
+    "build":"npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
